codex-rs/tui/src/bottom_pane/tests/snapshots/codex_tui__bottom_pane__tests__actionable_banner_tests__information_banner_dismissible.snap
---
source: tui/src/bottom_pane/tests/actionable_banner_tests.rs
expression: rendered
---
                                                                      
  Usage limit reached                                                 
  You can change models or request more usage.                        
                                                                      
  esc to dismiss · type to continue                                   
                                                                      
                                                                      
› Ask Codex to do anything                                            
                                                                      
  ? 查 看 快 捷 键                                        上 下 文 剩 余  100%
